fix: table overflow

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,11 @@ body {
   box-shadow: 0px 2px 4px 0px #ddd;
   border-radius: 7px;
   padding: 15px;
+  max-height: 500px;
+}
+.block-container {
+  height: 450px;
+  overflow-y: auto;
 }
 
 /* Side bar */
